--- a/diffusion_policy/train_hdf5_f200.ipynb
+++ b/diffusion_policy/train_hdf5_f200.ipynb
@@ -106,7 +106,7 @@
     "    pred_horizon=pred_horizon,\n",
     "    obs_horizon=obs_horizon,\n",
     "    action_horizon=action_horizon,\n",
-    "    hdf5_filter_key=\"f50\"\n",
+    "    hdf5_filter_key=\"f200\"\n",
     ")\n",
     "stats=dataset.stats"
    ]
@@ -212,7 +212,7 @@
      "text": [
       "Epoch:   0%|          | 0/400 [00:00<?, ?it/s]/home/ns1254/miniforge3/envs/robodiff/lib/python3.9/site-packages/torch/nn/modules/conv.py:456: UserWarning: Applied workaround for CuDNN issue, install nvrtc.so (Triggered internally at ../aten/src/ATen/native/cudnn/Conv_v8.cpp:80.)\n",
       "  return F.conv2d(input, weight, bias, self.stride,\n",
-      "Epoch: 100%|█████████▉| 399/400 [25:48<00:03,  3.87s/it, loss=0.00815]"
+      "Epoch: 100%|██████████| 400/400 [1:35:56<00:00, 14.39s/it, loss=0.0052] \n"
      ]
     }
    ],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,9 +399,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Eval PushTImageEnv:   0%|          | 0/200 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Eval PushTImageEnv: 201it [00:13, 15.09it/s, reward=0]                         \n",
+      "Eval PushTImageEnv:  97%|█████████▋| 194/200 [00:12<00:00, 15.31it/s, reward=1]     \n",
+      "Eval PushTImageEnv: 100%|██████████| 200/200 [00:12<00:00, 15.84it/s, reward=1]      \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.33it/s, reward=0.869]                         \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.32it/s, reward=0.961]                          \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.34it/s, reward=0.907]                           \n",
+      "Eval PushTImageEnv:  52%|█████▏    | 104/200 [00:06<00:06, 15.83it/s, reward=1]    \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.34it/s, reward=0.959]                          \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.34it/s, reward=0.988]                         \n",
+      "Eval PushTImageEnv:  75%|███████▌  | 150/200 [00:09<00:03, 15.64it/s, reward=1]    \n",
+      "Eval PushTImageEnv:  72%|███████▏  | 143/200 [00:09<00:03, 15.74it/s, reward=1]     \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.32it/s, reward=0.7]                           \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.36it/s, reward=0]                         \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.33it/s, reward=0.87]                            \n",
+      "Eval PushTImageEnv:  59%|█████▉    | 118/200 [00:07<00:05, 15.59it/s, reward=1]     \n",
+      "Eval PushTImageEnv:  48%|████▊     | 95/200 [00:06<00:06, 15.67it/s, reward=1]       \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.32it/s, reward=0.0534]                         \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.23it/s, reward=0]                         \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.13it/s, reward=0.301]                            \n",
+      "Eval PushTImageEnv:  60%|██████    | 121/200 [00:08<00:05, 14.82it/s, reward=1]    \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.14it/s, reward=0]                         \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.14it/s, reward=0.755]                           \n",
+      "Eval PushTImageEnv:  66%|██████▋   | 133/200 [00:08<00:04, 15.35it/s, reward=1]      \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.32it/s, reward=0.919]                           \n",
+      "Eval PushTImageEnv:  40%|████      | 81/200 [00:05<00:08, 14.63it/s, reward=1]    \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.32it/s, reward=0.863]                         \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.33it/s, reward=0.989]                         \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.35it/s, reward=0.926]                         \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.34it/s, reward=0.948]                         \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.34it/s, reward=0.455]                            \n",
+      "Eval PushTImageEnv:  92%|█████████▏| 184/200 [00:11<00:01, 15.85it/s, reward=1]    \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.32it/s, reward=0.822]                          \n",
+      "Eval PushTImageEnv:  47%|████▋     | 94/200 [00:06<00:06, 15.52it/s, reward=1]    \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.31it/s, reward=0.843]                         \n",
+      "Eval PushTImageEnv:  88%|████████▊ | 176/200 [00:11<00:01, 15.82it/s, reward=1]     \n",
+      "Eval PushTImageEnv:  80%|████████  | 160/200 [00:10<00:02, 15.84it/s, reward=1]      \n",
+      "Eval PushTImageEnv:  68%|██████▊   | 136/200 [00:08<00:04, 15.83it/s, reward=1]    \n",
+      "Eval PushTImageEnv:  88%|████████▊ | 175/200 [00:11<00:01, 15.75it/s, reward=1]    \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.33it/s, reward=0.954]                         \n",
+      "Eval PushTImageEnv:  72%|███████▏  | 144/200 [00:09<00:03, 15.83it/s, reward=1]      \n",
+      "Eval PushTImageEnv:  52%|█████▏    | 103/200 [00:06<00:06, 15.69it/s, reward=1]     \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.32it/s, reward=0.936]                         \n",
+      "Eval PushTImageEnv:  23%|██▎       | 46/200 [00:03<00:10, 15.19it/s, reward=1]    \n",
+      "Eval PushTImageEnv:  60%|██████    | 120/200 [00:07<00:05, 15.83it/s, reward=1]     \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.33it/s, reward=0.439]                           \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.33it/s, reward=0.963]                         \n",
+      "Eval PushTImageEnv:  56%|█████▌    | 112/200 [00:07<00:05, 15.82it/s, reward=1]     \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.34it/s, reward=0]                         \n",
+      "Eval PushTImageEnv:  65%|██████▌   | 130/200 [00:08<00:04, 15.16it/s, reward=1]     \n",
+      "Eval PushTImageEnv: 201it [00:13, 15.31it/s, reward=0]                         "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Reward:  0.8265796373097334\n",
+      "Success Rate:  1.0\n",
+      "Mean Length:  171.94\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "rewards=[]\n",
     "success=[]\n",
