--- a/unet_analysis.ipynb
+++ b/unet_analysis.ipynb
@@ -63,10 +63,10 @@
     "\n",
     "import h5py\n",
     "\n",
-    "from pusht_data_utils import get_data_stats, normalize_data, unnormalize_data, PushTImageDatasetFromHDF5\n",
-    "from vision_model import ResidualBlock, ResNetFe, replace_bn_with_gn\n",
-    "from noise_predictor_model import ConditionalUnet1D\n",
-    "from myddpm import MyScheduler, MyDDPM"
+    "from diffusion_policy.pusht_data_utils import get_data_stats, normalize_data, unnormalize_data, PushTImageDatasetFromHDF5\n",
+    "from diffusion_policy.vision_model import ResidualBlock, ResNetFe, replace_bn_with_gn\n",
+    "from diffusion_policy.noise_predictor_model import ConditionalUnet1D\n",
+    "from diffusion_policy.myddpm import MyScheduler, MyDDPM"
    ]
   },
   {
@@ -703,6 +703,88 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([64, 16, 2]), torch.Size([64]), torch.Size([64, 1028]))"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "noisy_actions.shape, timesteps.shape, obs_cond.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([64, 16, 2])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eps_theta = noise_pred_net(noisy_actions, timesteps, global_cond=obs_cond)\n",
+    "eps_theta.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([64, 16, 2])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "noisy_actions = torch.randn(64, 16, 2).to(device)\n",
+    "timesteps = torch.randint(0, 100, (64,)).to(device)\n",
+    "obs_cond = torch.randn(64, 1028).to(device)\n",
+    "\n",
+    "noisy_actions.shape, timesteps.shape, obs_cond.shape\n",
+    "\n",
+    "eps_theta = noise_pred_net(noisy_actions, timesteps, global_cond=obs_cond)\n",
+    "eps_theta.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -805,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +896,7 @@
        "torch.Size([64, 256])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +908,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([64, 256]), torch.Size([64, 1028]))"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "global_feature.shape, global_cond.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -835,20 +937,28 @@
        "torch.Size([64, 1284])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "if global_cond is not None:\n",
-    "    global_feature = torch.cat([global_feature, global_cond], axis=-1)\n",
+    "global_feature = torch.cat([global_feature, global_cond], axis=-1)\n",
     "global_feature.shape "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +967,7 @@
        "torch.Size([64, 2, 16])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +988,7 @@
        "torch.Size([64, 1024, 4])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +1015,7 @@
        "torch.Size([64, 1024, 4])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +1038,7 @@
        "torch.Size([64, 256, 16])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +1064,7 @@
        "torch.Size([64, 2, 16])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,10 +1099,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "self= noise_pred_net"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sequential(\n",
+       "  (0): SinusoidalPosEmb()\n",
+       "  (1): Linear(in_features=256, out_features=1024, bias=True)\n",
+       "  (2): Mish()\n",
+       "  (3): Linear(in_features=1024, out_features=256, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "self.diffusion_step_encoder"
+   ]
   },
   {
    "cell_type": "code",
@@ -1006,7 +1143,63 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "def forward(self,\n",
+    "        sample: torch.Tensor,\n",
+    "        timestep: Union[torch.Tensor, float, int],\n",
+    "        global_cond=None):\n",
+    "    \"\"\"\n",
+    "    x: (B,T,input_dim)\n",
+    "    timestep: (B,) or int, diffusion step\n",
+    "    global_cond: (B,global_cond_dim)\n",
+    "    output: (B,T,input_dim)\n",
+    "    \"\"\"\n",
+    "    # (B,T,C)\n",
+    "    sample = sample.moveaxis(-1,-2)\n",
+    "    # (B,C,T)\n",
+    "\n",
+    "    # 1. time\n",
+    "    timesteps = timestep\n",
+    "    if not torch.is_tensor(timesteps):\n",
+    "        # TODO: this requires sync between CPU and GPU. So try to pass timesteps as tensors if you can\n",
+    "        timesteps = torch.tensor([timesteps], dtype=torch.long, device=sample.device)\n",
+    "    elif torch.is_tensor(timesteps) and len(timesteps.shape) == 0:\n",
+    "        timesteps = timesteps[None].to(sample.device)\n",
+    "    # broadcast to batch dimension in a way that's compatible with ONNX/Core ML\n",
+    "    timesteps = timesteps.expand(sample.shape[0])\n",
+    "\n",
+    "    global_feature = self.diffusion_step_encoder(timesteps)\n",
+    "\n",
+    "    if global_cond is not None:\n",
+    "        global_feature = torch.cat([\n",
+    "            global_feature, global_cond\n",
+    "        ], axis=-1)\n",
+    "\n",
+    "    x = sample\n",
+    "    h = []\n",
+    "    for idx, (resnet, resnet2, downsample) in enumerate(self.down_modules):\n",
+    "        x = resnet(x, global_feature)\n",
+    "        x = resnet2(x, global_feature)\n",
+    "        h.append(x)\n",
+    "        x = downsample(x)\n",
+    "\n",
+    "    for mid_module in self.mid_modules:\n",
+    "        x = mid_module(x, global_feature)\n",
+    "\n",
+    "    for idx, (resnet, resnet2, upsample) in enumerate(self.up_modules):\n",
+    "        x = torch.cat((x, h.pop()), dim=1)\n",
+    "        x = resnet(x, global_feature)\n",
+    "        x = resnet2(x, global_feature)\n",
+    "        x = upsample(x)\n",
+    "\n",
+    "    x = self.final_conv(x)\n",
+    "\n",
+    "    # (B,C,T)\n",
+    "    x = x.moveaxis(-1,-2)\n",
+    "    # (B,T,C)\n",
+    "    return x\n"
+   ]
   },
   {
    "cell_type": "code",
