--- a/diffusion_model/ddpm_mnist.ipynb
+++ b/diffusion_model/ddpm_mnist.ipynb
@@ -58,14 +58,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "eb9a213e",
-   "metadata": {},
-   "source": [
-    "## Step 1. Load (or download) Dataset"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "f09f3f4d",
@@ -90,14 +82,6 @@
     "\n",
     "train_loader = DataLoader(dataset=train_dataset, batch_size=train_batch_size, shuffle=True, **kwargs)\n",
     "test_loader  = DataLoader(dataset=test_dataset,  batch_size=inference_batch_size, shuffle=False,  **kwargs)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "68156109",
-   "metadata": {},
-   "source": [
-    "## Step 2. Define our model: Denoising Diffusion Probabilistic Models (DDPMs)"
    ]
   },
   {
@@ -135,7 +119,7 @@
    "id": "42782a95",
    "metadata": {},
    "source": [
-    "In this tutorial, we use a simple stacked-convolution model with various dilations instead of UNet-like architecture."
+    "* Unet model from a tutorial"
    ]
   },
   {
