--- a/unet_analysis2.ipynb
+++ b/unet_analysis2.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "from diffusion_policy.pusht_data_utils import get_data_stats, normalize_data, unnormalize_data, PushTImageDatasetFromHDF5\n",
     "from diffusion_policy.vision_model import ResidualBlock, ResNetFe, replace_bn_with_gn\n",
-    "from diffusion_policy.noise_predictor_model import ConditionalUnet1D\n",
+    "# from diffusion_policy.noise_predictor_model import ConditionalUnet1D\n",
     "\n",
     "from typing import Tuple, Sequence, Dict, Union, Optional, Callable\n",
     "import torch\n",
@@ -124,9 +124,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ConditionalUnet1D' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m noise_pred_net \u001b[38;5;241m=\u001b[39m \u001b[43mConditionalUnet1D\u001b[49m(\n\u001b[1;32m      2\u001b[0m     input_dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m,\n\u001b[1;32m      3\u001b[0m     global_cond_dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1028\u001b[39m\n\u001b[1;32m      4\u001b[0m )\n\u001b[1;32m      5\u001b[0m noise_pred_net \u001b[38;5;241m=\u001b[39m noise_pred_net\u001b[38;5;241m.\u001b[39mto(device)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ConditionalUnet1D' is not defined"
+     ]
+    }
+   ],
    "source": [
     "noise_pred_net = ConditionalUnet1D(\n",
     "    input_dim=2,\n",
@@ -166,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,13 +287,17 @@
     "        )\n",
     "\n",
     "    def forward(self, x, cond):\n",
+    "        print('FiLM: ', x.shape, cond.shape)\n",
+    "\n",
     "        embed = self.cond_encoder(cond)\n",
     "\n",
     "        embed = embed.reshape( embed.shape[0], 2, self.out_channels, 1)\n",
     "        gamma = embed[:,0,...]\n",
     "        beta = embed[:,1,...]\n",
     "        \n",
+    "        \n",
     "        out = gamma * x + beta    # FiLM modulation\n",
+    "        print('FiLM: ', x.shape, gamma.shape, beta.shape, out.shape)\n",
     "        return out"
    ]
   },
@@ -290,11 +306,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# FiLM:  torch.Size([64, 256, 16]) torch.Size([64, 256, 1]) torch.Size([64, 256, 1]) torch.Size([64, 256, 16])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,9 +542,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([64, 16, 2]), torch.Size([64]), torch.Size([64, 1028]))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "noisy_actions.shape, timesteps.shape, obs_cond.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# noise_pred_net.mid_modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FiLM:  torch.Size([64, 256, 16]) torch.Size([64, 1284])\n",
+      "FiLM:  torch.Size([64, 256, 16]) torch.Size([64, 256, 1]) torch.Size([64, 256, 1]) torch.Size([64, 256, 16])\n",
+      "FiLM:  torch.Size([64, 512, 8]) torch.Size([64, 1284])\n",
+      "FiLM:  torch.Size([64, 512, 8]) torch.Size([64, 512, 1]) torch.Size([64, 512, 1]) torch.Size([64, 512, 8])\n",
+      "FiLM:  torch.Size([64, 1024, 4]) torch.Size([64, 1284])\n",
+      "FiLM:  torch.Size([64, 1024, 4]) torch.Size([64, 1024, 1]) torch.Size([64, 1024, 1]) torch.Size([64, 1024, 4])\n",
+      "FiLM:  torch.Size([64, 1024, 4]) torch.Size([64, 1284])\n",
+      "FiLM:  torch.Size([64, 1024, 4]) torch.Size([64, 1024, 1]) torch.Size([64, 1024, 1]) torch.Size([64, 1024, 4])\n",
+      "FiLM:  torch.Size([64, 512, 4]) torch.Size([64, 1284])\n",
+      "FiLM:  torch.Size([64, 512, 4]) torch.Size([64, 512, 1]) torch.Size([64, 512, 1]) torch.Size([64, 512, 4])\n",
+      "FiLM:  torch.Size([64, 256, 8]) torch.Size([64, 1284])\n",
+      "FiLM:  torch.Size([64, 256, 8]) torch.Size([64, 256, 1]) torch.Size([64, 256, 1]) torch.Size([64, 256, 8])\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -541,7 +613,7 @@
        "torch.Size([64, 16, 2])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,6 +1019,118 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# eps_theta = noise_pred_net(noisy_actions, timesteps, global_cond=obs_cond)\n",
+    "# eps_theta.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([64, 16, 2]), torch.Size([64]), torch.Size([64, 1028]))"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample=noisy_actions\n",
+    "timestep=timesteps\n",
+    "global_cond=obs_cond\n",
+    "sample.shape, timestep.shape, global_cond.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([64, 1284]), torch.Size([64, 256]))"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample = sample.moveaxis(-1,-2)  # (B,C,T)\n",
+    "\n",
+    "# 1. time \n",
+    "timestep  = timestep.expand(sample.shape[0]) \n",
+    "positional_feature = noise_pred_net.diffusion_step_encoder(timestep)\n",
+    "\n",
+    "global_feature = torch.cat([positional_feature, global_cond], axis=-1)\n",
+    "global_feature.shape, positional_feature.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "# unet training\n",
+    "x = sample\n",
+    "h = []\n",
+    "for idx, down_module in enumerate(self.down_modules):\n",
+    "    x, x_small = down_module(x, global_feature) \n",
+    "    h.append(x)\n",
+    "    x = x_small \n",
+    "\n",
+    "for mid_module in self.mid_modules:\n",
+    "    x = mid_module(x, global_feature)\n",
+    "\n",
+    "for idx, upmodule  in enumerate(self.up_modules):\n",
+    "    x= upmodule(x, h.pop(), global_feature) \n",
+    "\n",
+    "x = self.final_conv(x)\n",
+    "\n",
+    "# (B,C,T)\n",
+    "x = x.moveaxis(-1,-2)\n",
+    "# (B,T,C)\n",
+    "return x"
+   ]
   },
   {
    "cell_type": "code",
