--- a/diffusion_model/my_swissroll2.ipynb
+++ b/diffusion_model/my_swissroll2.ipynb
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1337,27 +1337,23 @@
     "    Returns:\n",
     "        np.ndarray: 2D binary image with points plotted.\n",
     "    \"\"\"\n",
-    "    # Initialize an empty image\n",
+    "     \n",
     "    image = np.zeros((img_size, img_size), dtype=np.uint8)\n",
     "\n",
-    "    # Scale data to fit image pixel coordinates\n",
     "    scale = img_size / (data_range[1] - data_range[0])  # Scale factor\n",
     "    offset = -data_range[0] * scale  # Offset to shift -2.5 -> 0\n",
-    "\n",
-    "    # Transform data to pixel coordinates\n",
+    "    \n",
     "    x_pixels = (data[:, 0] * scale + offset).astype(int)\n",
     "    y_pixels = (data[:, 1] * scale + offset).astype(int)\n",
     "\n",
-    "    # Clip values to ensure they are within image bounds\n",
     "    x_pixels = np.clip(x_pixels, 0, img_size - 1)\n",
     "    y_pixels = np.clip(y_pixels, 0, img_size - 1)\n",
     "\n",
-    "    # Plot points onto the image\n",
-    "    image[y_pixels, x_pixels] = 255  # Set corresponding pixels to white (255)\n",
+    "    image[y_pixels, x_pixels] = 255  #  white (255)\n",
     "\n",
     "    return image\n",
     "\n",
-    "# Example usage\n",
+    "\n",
     "data = np.random.uniform(-2.5, 2.5, (500, 2))  # Example 500x2 data points\n",
     "image = data_to_image(data)\n",
     "\n",
