--- a/diffusion_model/my_swissroll2.ipynb
+++ b/diffusion_model/my_swissroll2.ipynb
@@ -456,11 +456,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch.nn as nn\n",
+    "\n",
+    "# Note: this is a sanity check implementation, hence some models are reused from other sources.\n",
     "\n",
     "class DiffusionBlock(nn.Module):\n",
     "    def __init__(self, nunits):\n",
